--- a/css/style.css
+++ b/css/style.css
@@ -35,14 +35,15 @@ body{
     color:white;
     font-size: 1.5em;
 }
-.play-area img{
+.play-area svg{
     position: absolute;
     left:50%;
     top:50%;
     transform: translate(-50%,-50%);
     width: 70%;
+    z-index: -5;
 }
-.play-area img:nth-child(3){
+.play-area img:nth-child(1){
     width: 30%;
     cursor: pointer;
 }
@@ -84,4 +85,7 @@ body{
 }
 .song-pick button:nth-child(2):hover{
     background: rgb(184, 122, 43);
+}
+.moving-outline{
+    /* transform: rotate(90deg); */
 }
